--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,8 @@
 <resources>
     <string name="app_name">Pinoy Klasiks</string>
+    <string name="title">Pinoy Klasiks</string>
+    <string name="subTitle">The best restaurant</string>
+    <string name="tmenu_about">About</string>
+    <string name="tmenu_settings">Settings</string>
+    <string name="tmenu_searchable">Search</string>
 </resources>
