--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,6 +4,11 @@
     <string name="subTitle">Small place with big taste</string>
     <string name="tmenu_about">About</string>
     <string name="tmenu_settings">Settings</string>
-    <string name="tmenu_searchable">Search</string>
+    <string name="tmenu_searchable">What would you like to find?</string>
     <string name="search_result_subtitle">Results for : </string>
+
+    <!-- FOR HAMBURGER MENU-->
+    <string name="drawer_open">Open navigation drawer</string>
+    <string name="drawer_close">Close navigation drawer</string>
+
 </resources>
