Working with suborder

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,5 +11,8 @@
     <string name="drawer_open">Open navigation drawer</string>
     <string name="drawer_close">Close navigation drawer</string>
     <string name="Cart">Cart</string>
+    <string name="cartTitle">Your cart</string>
+    <string name="main_menu">Main menu</string>
+    <string name="orders_history">Orders history</string>
 
 </resources>
